Refactored WISE5 default theme navigation to always show top level items and allow collapse/expand of activities; navigation is no longer a view but loaded once via an ng-include
- Also added time display to discussion component replies > 1 week old

--- a/src/main/webapp/wise5/vle/themes/default/style/css/vle.css
+++ b/src/main/webapp/wise5/vle/themes/default/style/css/vle.css
@@ -2199,6 +2199,8 @@ md-input-container.md-wise-theme label { color: rgba(0, 0, 0, 0.87); }
 .button--footer__element { padding-left: 8px; }
 
 .l-header .logo { margin-left: 0 !important; height: 40px; width: 40px; }
+.l-header .logo-link { min-width: auto; }
+.l-header .logo-link:hover, .l-header .logo-link:focus { border: 0 none; }
 @media only screen and (min-width: 0) and (max-width: 600px) and (orientation: portrait) { .l-header .md-toolbar-tools h1, .l-header .md-toolbar-tools h2, .l-header .md-toolbar-tools h3 { font-size: 15px; } }
 
 .l-main { background-color: #eeeeee; }
@@ -2273,9 +2275,13 @@ md-input-container.md-wise-theme label { color: rgba(0, 0, 0, 0.87); }
 
 .nav-contents--root { padding: 0; }
 
-@media (min-width: 600px) { .nav-item--card__content { min-height: 100px; } }
+.nav-item--card__content { -moz-border-radius-topleft: 4px; -webkit-border-top-left-radius: 4px; border-top-left-radius: 4px; -moz-border-radius-topright: 4px; -webkit-border-top-right-radius: 4px; border-top-right-radius: 4px; }
+.nav-item--card__content:focus { -moz-box-shadow: 0px 1px 1px -1px #1C8CA8 inset; -webkit-box-shadow: 0px 1px 1px -1px #1C8CA8 inset; box-shadow: 0px 1px 1px -1px #1C8CA8 inset; outline: none; }
 
 .nav-contents--list { padding: 8px 16px; }
+
+.nav-item.expanded { -webkit-flex: 1 1 100% !important; flex: 1 1 100% !important; max-width: 860px !important; max-height: none !important; margin: 0 auto; }
+@media only screen and (min-width: 600px) { .nav-item.expanded { margin: 8px auto; } }
 
 .nav-item--list { background-color: #ffffff; border-bottom: 1px solid #eeeeee; }
 
@@ -2287,7 +2293,7 @@ md-input-container.md-wise-theme label { color: rgba(0, 0, 0, 0.87); }
 
 .nav-item__title { padding-left: 16px; line-height: 1.2; font-weight: 400; }
 
-.nav-item__info { color: rgba(0, 0, 0, 0.54); }
+.nav-item__info { color: rgba(0, 0, 0, 0.54); padding: 0 8px; }
 
 .progress-wrapper { padding: 8px 0; cursor: pointer; }
 
